
    <resources>
        <string name="app_name">My calc</string>
        <string name="zero">0</string>
        <string name="one">1</string>
        <string name="two">2</string>
        <string name="three">3</string>
        <string name="four">4</string>
        <string name="five">5</string>
        <string name="six">6</string>
        <string name="seven">7</string>
        <string name="eight">8</string>
        <string name="nine">9</string>
        <string name="add">+</string>
        <string name="sub">-</string>
        <string name="mul">x</string>
        <string name="Div">/</string>
        <string name="C" >C</string>
        <string name="AC" >AC</string>
        <string name="Dot" >.</string>
        <string name="Equal" >=</string>
        <string name="per" >%</string>
        <string name="error">Error</string>
        <string name="default_zero">0</string>
        <string name="_0">0</string>
    </resources>

